# SQL-File-Manager

./: CMakeLists.txt  Master.cpp  README.md  README.txt  my_program  test  test.cpp  test.sh  traverse.cpp
include/: Master.h  SFM.h
scripts/: test.sh
src/: SFM.cpp  main.cpp
